grammar.bnf
%right 'in'
%right LOW
%right ']'
%nonassoc '>' '<' '<=' '>=' '==' '!=' '&&' '||'
%left '??'
%left ident 'not'

expr
  : atom '>' atom
  | atom '<' atom
  | atom '>=' atom
  | atom '<=' atom
  | atom '!=' atom
  | atom '==' atom
  | atom '&&' atom
  | atom '||' atom
  | atom 'in' atom
  | atom '??' atom
  | ap
  | '{{' expr '}}'

ap
  : function
  | atom

atom
  : path
  | range
  | iff
  | json
  | '(' expr ')'

path
  : path_vector

path_vector
  : ident path_tail
  | ident
  | ident '?'

path_tail
  : path_element
  | path_tail path_element

path_element
  : '.' ident
  | '?' '.' ident
  | '[' '\'' string '\'' ']'
  | '?' '[' '\'' string '\'' ']'
  | '[' int ']'
  | '?' '[' int ']'

function
  : ident '(' expr ')'
  | 'not' expr

range
  : '{{' 'range' mident ',' ident ':=' expr '}}' expr '{{' 'end' '}}'

mident
  : '_'
  | ident

iff
  : '{{' 'if' expr '}}' expr '{{' 'else' '}}' expr '{{' 'end' '}}'

json
  : string_lit
  | num_lit
  | boolean
  | null
  | array
  | object

string_lit
  : 's"' string_template '"e'
  | 's"' '"e'

string_template
  : string_template '{{' expr '}}'
  | string_template string
  | '{{' expr '}}'
  | string

num_lit
  : number
  | int %prec LOW

boolean
  : 'true'
  | 'false'

null
  : 'null'

array
  : '[' list_elements ']'
  | '[' ']'

list_elements
  : expr
  | list_elements ',' expr

object
  : '{' object_fields '}'
  | '{' '}'

object_fields
  : object_field
  | object_fields ',' object_field

object_field
  : 's"' object_key '"e' ':' expr
  | 's"' '"e' ':' expr

object_key
  : object_key string
  | string
